--- a/#source/common-style.scss
+++ b/#source/common-style.scss
@@ -21,6 +21,7 @@ $wave-2:#DCDCDC;
 }
 html, body {
    width:fit-content;
+   font-style: 'Cormorant Upright';
    font-weight: 400; 
    line-height:150%; 
 	font-size: 16px;
@@ -75,42 +76,3 @@ nav, footer, header {
    }
 }
 
-.button {
-   width: 13rem;
-   height: 40px;
-   padding: 5px;
-   background-color: $wave-2;
-   text-align: center;
-   border: 1px solid $border;
-   position: relative;
-   display: flex;
-   justify-content: center;
-}
-.button span {
-   display: block;
-   width: 10px;
-   height:10px;
-   opacity: 1;
-
-}
-.button::after {
-   position:absolute;
-   content:'Нарядить елку';
-   top:2px;
-   left:24px;
-   font-size: 18px;
-   text-transform: uppercase;
-   opacity: 0;
-}
-.button:hover {
-   background-color: $color-3;
-   transition: 300ms ease-in-out;
-}
-.button:hover::after {
-   opacity:1;
-   transition: 300ms ease-in-out;
-}
-.button:hover span {
-   opacity:0;
-   transition: 300ms ease-in-out;
-}
