--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -1,5 +1,5 @@
 @import 'common-style.scss';
-
+//Анимация
 @keyframes snowfall {
    0% {
      transform: translate3d(0, 0, 0);
@@ -73,6 +73,7 @@
    }
    
 }
+//контент
 .content {
    background-color: $color-8;
    z-index: 0;
@@ -97,28 +98,12 @@
    &__snowmen {
       position:fixed;
    }
-/*
-   &__sled {
-      position: fixed;
-      offset-path: path("M-274,13 C250,20 30,292 1300,12");
-      offset-rotate: reverse;
-      offset-rotate: 0deg;
-      offset-rotate: auto;
-      animation: move-sled 5s 6s linear infinite;
-      width: 140px;
-      height: 140px;
-      background: hotpink;
-      border-radius: 50%;
-   }
-*/
    &__deer {
       position: fixed;
       z-index: 3;
    }
-   &__deer img{
-      
-   }
 }
+//олени
 .deer-1 img {
    margin-top: 40px;
       width: 300px;
@@ -148,6 +133,7 @@
    animation:  move-sled 9s 6s ease-in-out infinite,
                jumping 1s 2s ease-in infinite forwards;
 }
+//сугробы
 .wave-1, .wave-2 {
    position: fixed;
    width: 100%;
@@ -169,7 +155,7 @@
    border-radius: 45% 45% 0px 0px; 
    animation: wave 3s linear; 
 }
-
+//снежинки
 .snowflake {
    --size: 1vw;
    width: var(--size);
@@ -189,6 +175,7 @@
    }
 }
 
+//снеговик
 .circle-1, .circle-2, .circle-3 {
    opacity: 0;
    position: relative;
@@ -342,6 +329,7 @@
    animation-fill-mode: forwards;
   }
 }
+//карточки
 .calendar {
    display: flex;
    width: 100%;
@@ -432,4 +420,45 @@
    max-width: 100%;
    min-width: 100%;
    height: auto;
+}
+
+//Кнопка
+.button {
+   width: 13rem;
+   height: 40px;
+   padding: 5px;
+   background-color: $wave-2;
+   text-align: center;
+   border: 1px solid $border;
+   position: relative;
+   display: flex;
+   justify-content: center;
+}
+.button span {
+   display: block;
+   width: 10px;
+   height:10px;
+   opacity: 1;
+
+}
+.button::after {
+   position:absolute;
+   content:'Нарядить елку';
+   top:2px;
+   left:24px;
+   font-size: 18px;
+   font-style: italic;
+   opacity: 0;
+}
+.button:hover {
+   background-color: $color-3;
+   transition: 300ms ease-in-out;
+}
+.button:hover::after {
+   opacity:1;
+   transition: 300ms ease-in-out;
+}
+.button:hover span {
+   opacity:0;
+   transition: 300ms ease-in-out;
 }
